fix navbar on Safari #86

--- a/web/themes/quartiers_solidaires/assets/components/molecules/nav/nav.scss
+++ b/web/themes/quartiers_solidaires/assets/components/molecules/nav/nav.scss
@@ -42,6 +42,7 @@
 
   // Handle icon animation on open
   .icon {
+    margin: 0 auto;
     transform: rotate(0deg);
 
     @include transition(transform 0.6s cubic-bezier(0.5, 0.53, 0.37, 0.94));
@@ -151,6 +152,8 @@
 .navbar {
   display: flex;
   position: absolute;
+  top: $navbar-icon-size + $grid-gutter-width / 2 - $border-width;
+  left: 50%;
   z-index: 20;
   flex-direction: column;
   justify-content: space-between;
@@ -158,7 +161,7 @@
   padding: $border-width $spacer;
   overflow: hidden;
   opacity: 0;
-  margin-top: ($navbar-icon-size + $grid-gutter-width / 2 - $border-width);
+  transform: translateX(-50%);
 
   @include transition(
     height 0.3s ease 0.1s,
